tests/purs/failing/MultipleErrors.out
Error 1 of 2:

  in module [33mMultipleErrors[0m
  at tests/purs/failing/MultipleErrors.purs:8:9 - 8:15 (line 8, column 9 - line 8, column 15)

    Could not match type
    [33m        [0m
    [33m  String[0m
    [33m        [0m
    with type
    [33m     [0m
    [33m  Int[0m
    [33m     [0m

  while checking that type [33mString[0m
    is at least as general as type [33mInt[0m
  while checking that expression [33m"Test"[0m
    has type [33mInt[0m
  in binding group foo, bar

  See https://github.com/purescript/documentation/blob/master/errors/TypesDoNotUnify.md for more information,
  or to contribute content related to this error.

Error 2 of 2:

  in module [33mMultipleErrors[0m
  at tests/purs/failing/MultipleErrors.purs:12:9 - 12:15 (line 12, column 9 - line 12, column 15)

    Could not match type
    [33m        [0m
    [33m  String[0m
    [33m        [0m
    with type
    [33m     [0m
    [33m  Int[0m
    [33m     [0m

  while checking that type [33mString[0m
    is at least as general as type [33mInt[0m
  while checking that expression [33m"Test"[0m
    has type [33mInt[0m
  in binding group foo, bar

  See https://github.com/purescript/documentation/blob/master/errors/TypesDoNotUnify.md for more information,
  or to contribute content related to this error.

